:bug: Removing sidebar on mobile since it was not working either way.

--- a/static/scss/sidebar.scss
+++ b/static/scss/sidebar.scss
@@ -29,6 +29,10 @@
       height: 100% ;
       width: 3px;
     }
+
+    @media (max-width: map-get($breakpoints, breakpoint-tablet)) {
+      display:  none;
+    }
   }
 
 
